# platanus-build-night-26-mx-pedrofdzl

./: .gitignore  .pre-commit-config.yaml  README.md  build-night-project.json  docker-compose.yml
backend/: .env.example  .gitignore  Makefile  manage.py  pyproject.toml
backend/accounts/: models.py  serializers.py  tests.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/core/: admin.py  exceptions.py  models.py  serializers.py  tasks.py  test_api.py  tests.py  urls.py  views.py
backend/core/management/commands/: backfill_requirement_embeddings.py  sweep_stale_facts.py
backend/core/migrations/: 0002_knowledge_layer.py  0003_questionnaire_layer.py  0004_remove_factcitation_evidence_chunk_and_more.py  0005_questionnaire_layout_requirement_source_row.py  0006_alter_issue_options_issue_due_date_issue_severity_and_more.py  0007_answer_audited_at_answer_reused_from_answer_source_and_more.py  0008_alter_requirement_normalized_key.py
backend/core/services/: auditor.py  chunking.py  copilot.py  docx.py  embeddings.py  extraction.py  freshness.py  ingest.py  llm.py  questionnaire_export.py  questionnaire_ingest.py  questionnaire_mapper.py  responder.py  reuse.py
backend/ditto/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/templates/admin/: base_site.html
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(app)/account/: page.tsx
frontend/src/app/(app)/copilot/: page.tsx
frontend/src/app/(app)/dashboard/: page.tsx
frontend/src/app/(app)/documents/: page.tsx
frontend/src/app/(app)/documents/[id]/: page.tsx
frontend/src/app/(app)/facts/: page.tsx
frontend/src/app/(app)/issues/: page.tsx
frontend/src/app/(app)/questionnaires/: page.tsx
frontend/src/app/(app)/questionnaires/[id]/: page.tsx
frontend/src/app/(app)/requirements/: page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/components/: analysis-progress.tsx  charts.tsx  columns.tsx  copilot-canvas.tsx  copilot-panel.tsx  data-table.tsx  doc-editor.tsx  fact-review.tsx  issue-calendar.tsx  providers.tsx  sidebar-jobs.tsx  status-badge.tsx  theme-toggle.tsx  top-bar.tsx  window.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  data-table.tsx  dialog.tsx  dropdown-menu.tsx  file-upload.tsx  input.tsx  table.tsx
frontend/src/lib/: analysis-ui.tsx  api.ts  auth.tsx  copilot-ui.tsx  copilot.ts  mock.ts  resources.ts  types.ts  use-analysis-job.ts  utils.ts
