[project]
name = "ditto-backend"
version = "0.1.0"
description = "Ditto — autonomous compliance agent (backend)"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.105.2",
    "celery>=5.6.3",
    "django>=5.1,<5.3",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "django-filter>=25.2",
    "django-otp>=1.7.0",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "gunicorn>=23.0.0",
    "mammoth>=1.12.0",
    "markdownify>=1.2.2",
    "openai>=2.38.0",
    "openpyxl>=3.1.5",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "qrcode[pil]>=8.2",
    "redis>=8.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter (single tool, fast). Run: `uv run ruff check .`
#                                                       `uv run ruff format .`
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["migrations"]
force-exclude = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DJ",  # flake8-django
    "SIM", # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
"*/settings.py" = ["E501", "F403", "F405"]
"*/migrations/*" = ["E501"]

[tool.ruff.format]
quote-style = "double"
